# lilygo-epd47-idf

./: CMakeLists.txt  README.md  idf.sh  sdkconfig
main/: CMakeLists.txt  epd_driver.c  epd_driver.h  font.c  i2s_data_bus.c  main.c  touch.cpp
